--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
     "typedoc": "^0.18.0"
-}
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
