--- a/package.json
+++ b/package.json
@@ -1,19 +1,56 @@
 {
+  "files": [
+    "/dist"
+  ],
   "scripts": {
-    "start": "node out/app.js",
-    "prestart": "npm run build",
-    "build": "tsc"
+    "build": "rollup --config ./rollup.config.js",
+    "test": "cross-env TS_NODE_PROJECT='test/tsconfig.test.json' mocha -t 2000 test/**/**.test.ts",
+    "cover": "nyc --reporter=html yarn run test"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc --noEmit && yarn test"
+    }
+},
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1",
-    "typedoc": "^0.18.0"
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/chai": "^4.3.0",
+    "@types/lodash": "^4.14.179",
+    "@types/mocha": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.3.6",
+    "core-decorators": "^0.20.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lodash": "^4.17.21",
+    "mocha": "^9.2.1",
+    "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
+    "rollup": "^2.68.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.13.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.2"
   },
-  "dependencies": {
-    "lodash": "^4.17.21"
+  "mocha": {
+    "require": [
+      "ts-node/register",
+      "tsconfig-paths/register",
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
