--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,44 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "outDir": "./out",
-    "rootDir": "./src",
-    "sourceMap": true,
-    "incremental": true,
-    "moduleResolution": "node",
-    "target": "es5"
-  }
+      "baseUrl": ".",
+      "importHelpers": true,
+      "declaration": true,
+      "declarationDir": "src",
+      "declarationMap": true,
+      "downlevelIteration": true,
+      "experimentalDecorators": true,
+      "forceConsistentCasingInFileNames": true,
+      "lib": ["es2015", "es2016", "es2017"],
+      "locale": "zh-CN",
+      "module": "esnext",
+      "moduleResolution": "node",
+      "newLine": "lf",
+      "noEmitHelpers": true,
+      "noEmitOnError": true,
+      "noErrorTruncation": true,
+      "noFallthroughCasesInSwitch": true,
+      "noImplicitReturns": true,
+      "noImplicitAny": false,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "outDir": "dist",
+      "paths": {
+          "@src*": ["src*"],
+          "@lib*": ["lib*"]
+      },
+      "preserveConstEnums": true,
+      "esModuleInterop": true,
+      "removeComments": true,
+      "resolveJsonModule": true,
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "strict":true,
+      "strictNullChecks": false,   
+      "strictPropertyInitialization": false,
+      "target": "es5",
+      "typeRoots": ["node_modules/@types", "./typings"]
+  },
+  "include": ["src/**/*", "lib/**/*", "test/**/*"],
+  "exclude": ["node_modules", "dist"],
 }
