--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup --config ./rollup.config.js",
     "test": "cross-env TS_NODE_PROJECT='test/tsconfig.test.json' mocha -t 2000 test/**/**.test.ts",
     "cover": "nyc --reporter=html yarn run test",
-    "start": "node dist/index.js"
+    "start": "rollup --config ./rollup.config.js && node dist/index.js"
   },
   "husky": {
     "hooks": {
